// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Games /> Snapshots renders correctly 1`] = `
<div
  className="new-game"
>
  <a
    className="waves-effect waves-light btn-small"
    href="/game/123"
    onClick={[Function]}
  >
    Go to game
  </a>
</div>
`;

exports[`<Games /> Snapshots renders error correctly 1`] = `
<div
  className="error"
>
  There is an error!
</div>
`;

exports[`<Games /> Snapshots renders loading game correctly 1`] = `
<div
  className="loading"
>
  Loading...
</div>
`;
